--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,117 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Guides:wght@400..700&display=swap');
+/* start of general */
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  line-height: 1.5;
+}
+html{
+  scroll-behavior: smooth;
+}
+.sec-header{
+  font-size: 48px;
+  color: #f44336;
+  position: relative;
+  width: fit-content;
+  margin-bottom: 50px;
+}
+.sec-header::after{
+  content: "";
+  position: absolute;
+  height: 10px;
+  width: 60px;
+  left: 0;
+  top: 100%;
+  border-radius: 10px;
+  background-color: #f44336;
+}
+.container{
+  width: 80% !important;
+  margin-left: 20% !important;
+  padding-left: 40px !important;
+  padding-right: 40px !important;
+}
+
+.c_o{
+  font-family: "Edu AU VIC WA NT Guides", cursive !important;
+  color: rgb(244, 67, 54);
+}
+/* end of general */
+
+@media only screen and (max-width:320px) {
+    nav{
+        width: 40% !important;
+        height: 100vh;
+        position: fixed;
+        left: 0;
+        top: 0;
+        background-color: #f44336;
+        color: white;
+        padding: 10px;
+        font-weight: bold;
+    }
+    nav h3{
+        font-size: 10px;
+        margin: 20px 0;
+        margin-bottom: 50px;
+        padding: 10px;
+    }
+    nav li {
+        padding: 5px;
+        list-style: none;
+        color: white;
+        transition: all 0.5s;
+    }
+    nav a{
+        text-decoration: none;
+        color: white;
+        font-size: 16px;
+    }
+    .container{
+        width: 60% !important;
+        margin-left: 40% !important;
+        padding-left: 40px !important;
+        padding-right: 40px !important;
+    }
+}
+@media only screen and (min-width:321px) and (max-width:768px) {
+    nav{
+        width: 30% !important;
+        height: 100vh;
+        position: fixed;
+        left: 0;
+        top: 0;
+        background-color: #f44336;
+        color: white;
+        padding: 10px;
+        font-weight: bold;
+    }
+    nav h3{
+        font-size: 16px;
+        margin: 20px 0;
+        margin-bottom: 50px;
+        padding: 10px;
+
+    }
+    nav li {
+        padding: 10px;
+        list-style: none;
+        color: white;
+        transition: all 0.5s;
+
+    }
+    nav a{
+        text-decoration: none;
+        color: white;
+        font-size: 16px;
+    }
+    .container{
+        width: 70% !important;
+        margin-left: 30% !important;
+        padding-left: 40px !important;
+        padding-right: 40px !important;
+    }
+}
+
